Finish refactoring JSX

--- a/src/styles/css/main.css
+++ b/src/styles/css/main.css
@@ -48,6 +48,7 @@ body {
   color: var(--textColor);
   transition: all 0.3s linear;
   font-family: "Source Sans Pro", sans-serif;
+  font-size: 1.4rem;
 }
 
 h1,
@@ -78,15 +79,10 @@ h5 {
   font-size: 1.6rem;
 }
 
-p,
-li,
-a {
-  font-size: 1.4rem;
-}
-
 a {
   text-decoration: none;
   color: inherit;
+  cursor: pointer;
 }
 
 a:visited {
@@ -99,4 +95,29 @@ li {
 
 img {
   width: 200px;
+}
+
+.navbar {
+  border: 1px solid red;
+  display: none;
+}
+
+.navbar-open {
+  display: block;
+}
+
+.container {
+  display: flex;
+}
+
+.skills {
+  border: 3px solid green;
+}
+
+.skills img {
+  width: 50px;
+}
+
+.skills ul {
+  display: flex;
 }
