--- a/src/styles/scss/components/navigation/_navbar.scss
+++ b/src/styles/scss/components/navigation/_navbar.scss
@@ -1,3 +1,37 @@
+#selfie-container {
+  width: 90%;
+  margin: 0 auto;
+  height: 70%;
+  // background-color: $shade1;
+  background: linear-gradient(
+    to right,
+    rgba(255, 50, 50, 0) 0%,
+    rgba(255, 50, 50, 0) 70%,
+    $accentColor 90%,
+    rgba(255, 48, 48, 0) 100%
+  );
+  // display: flex;
+  // justify-content: center;
+  -webkit-text-fill-color: transparent;
+  border-radius: 50% 50% 10px 10px;
+  overflow: hidden;
+  cursor: default;
+}
+#selfie {
+  border-radius: 50% 50% 10px 10px;
+  background: url("../../assets/images/me-headshot.png") no-repeat center;
+  width: 100%;
+  word-spacing: 0px;
+  -webkit-background-clip: text;
+  background-clip: text;
+  height: 100%;
+  font-size: 10px;
+  line-height: 0.4;
+  font-weight: 900;
+  letter-spacing: -1px;
+  background-size: cover;
+  border: 2px solid $accentColor;
+}
 .navbar {
   width: 70%;
   max-width: 20rem;
@@ -12,12 +46,16 @@
   flex-direction: column;
   justify-content: space-between;
   padding: 1rem 0 1rem 0.5rem;
+  z-index: 8;
 
   &-header {
-    height: 20%;
-    padding-top: 5rem;
+    height: 30%;
     text-align: center;
     letter-spacing: 1px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+
     h3 {
       padding-bottom: 0.5rem;
     }
@@ -45,7 +83,7 @@
       width: 100%;
       display: flex;
       flex-direction: column;
-      justify-content: flex-start;
+      justify-content: center;
       li {
         width: 100%;
         border-top: 1px solid $shade1;
@@ -114,12 +152,14 @@
 @media (min-width: 768px) {
   .container {
     display: flex;
+    padding-left: 20rem;
   }
 
   .navbar {
     transform: none;
-    position: sticky;
+    // position: sticky;
   }
+
   #menu-btn {
     display: none;
   }
