--- a/src/styles/scss/components/_global.scss
+++ b/src/styles/scss/components/_global.scss
@@ -19,9 +19,11 @@
 .container {
   position: relative;
   height: 100%;
+  width: 100%;
 }
 .pages {
   border: 1px solid blue;
+  width: 100%;
 }
 
 @import "./navigation/navbar";
