--- a/src/styles/scss/utils/_mediaQueries.scss
+++ b/src/styles/scss/utils/_mediaQueries.scss
@@ -3,3 +3,21 @@
     font-size: 12px;
   }
 }
+
+@media (min-width: 1024px) {
+  html {
+    font-size: 14px;
+  }
+}
+
+@media (min-width: 2000px) {
+  html {
+    font-size: 20px;
+  }
+}
+
+@media (min-width: 3000px) {
+  html {
+    font-size: 24px;
+  }
+}
