--- a/src/styles/scss/components/_global.scss
+++ b/src/styles/scss/components/_global.scss
@@ -22,8 +22,11 @@
   width: 100%;
 }
 .pages {
-  border: 1px solid blue;
   width: 100%;
+}
+.page {
+  margin: auto;
+  padding: 0 0.5rem;
 }
 .page header {
   background: linear-gradient(to right, $oppositeColor 0%, $accentColor 10%);
