--- a/src/styles/scss/components/pages/about/_about.scss
+++ b/src/styles/scss/components/pages/about/_about.scss
@@ -85,6 +85,15 @@
         color: $abs-white;
         background-color: darken($color: #408bdd, $amount: 40%);
       }
+      a:first-of-type {
+        display: flex;
+        align-items: center;
+        padding: 0.7rem 2rem;
+        svg {
+          position: relative;
+          top: 2px;
+        }
+      }
     }
   }
   // &-socials-container {
