Project modal logic complete

--- a/src/styles/css/main.css
+++ b/src/styles/css/main.css
@@ -730,7 +730,7 @@ img {
   width: 90%;
   margin: auto;
   max-width: 30rem;
-  height: 30%;
+  height: 40rem;
   max-height: 25rem;
   display: flex;
   flex-direction: column;
