--- a/src/styles/scss/components/pages/experience/partials/_projects.scss
+++ b/src/styles/scss/components/pages/experience/partials/_projects.scss
@@ -19,7 +19,7 @@
     width: 90%;
     margin: auto;
     max-width: 30rem;
-    height: 30%;
+    height: 40rem;
     max-height: 25rem;
 
     // border: 1px solid green;
